feat(playbooks/templates): add switch for routing to kimai

--- a/playbooks/templates/kimai-docker-compose.yml.j2
+++ b/playbooks/templates/kimai-docker-compose.yml.j2
@@ -45,7 +45,7 @@ services:
     image: tobybatch/nginx-fpm-reverse-proxy
     labels:
       - traefik.docker.network=traefik
-      - traefik.enable=true
+      - traefik.enable={{ a_kimai__routing_enabled }}
       - traefik.http.routers.kimai.entrypoints=websecure
       - traefik.http.routers.kimai.rule=Host(`{{ a_kimai__service_fqdn }}`)
       - traefik.http.routers.kimai.tls.certresolver=letsencrypt
