--- a/playbooks/templates/traefik-docker-compose.yml.j2
+++ b/playbooks/templates/traefik-docker-compose.yml.j2
@@ -35,6 +35,7 @@ services:
     volumes:
       - letsencrypt:/letsencrypt
       - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
 
 volumes:
   letsencrypt:
