--- a/playbooks/templates/traefik-docker-compose.yml.j2
+++ b/playbooks/templates/traefik-docker-compose.yml.j2
@@ -18,15 +18,20 @@ services:
       --providers.docker
       --providers.docker.exposedbydefault=false
     labels:
-      - "traefik.docker.network=traefik"
-      - "traefik.enable=true"
-      - "traefik.http.middlewares.traefik-auth.basicauth.users={{ f_traefik__basic_auth_users }}"
-      - "traefik.http.routers.traefik.entrypoints=websecure"
-      - "traefik.http.routers.traefik.middlewares=traefik-auth"
-      - "traefik.http.routers.traefik.rule=Host(`traefik.{{ ansible_nodename }}`)"
-      - "traefik.http.routers.traefik.service=api@internal"
-      - "traefik.http.routers.traefik.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.traefik.tls=true"
+      - traefik.docker.network=traefik
+      - traefik.enable=true
+      - traefik.http.middlewares.sts-headers.headers.STSIncludeSubdomains=true
+      - traefik.http.middlewares.sts-headers.headers.STSSeconds=31536000
+      - traefik.http.middlewares.traefik-auth.basicauth.users={{ f_traefik__basic_auth_users }}
+      - traefik.http.middlewares.redirect-non-www-to-www.redirectregex.permanent=false
+      - traefik.http.middlewares.redirect-non-www-to-www.redirectregex.regex="^https?://(?:www\\.)?(.+)"
+      - traefik.http.middlewares.redirect-non-www-to-www.redirectregex.replacement="https://www.$${1}"
+      - traefik.http.routers.traefik.entrypoints=websecure
+      - traefik.http.routers.traefik.middlewares=traefik-auth
+      - traefik.http.routers.traefik.rule=Host(`traefik.{{ ansible_nodename }}`)
+      - traefik.http.routers.traefik.service=api@internal
+      - traefik.http.routers.traefik.tls.certresolver=letsencrypt
+      - traefik.http.routers.traefik.tls=true
     ports:
       - 80:80
       - 443:443
