--- a/playbooks/templates/traefik-docker-compose.yml.j2
+++ b/playbooks/templates/traefik-docker-compose.yml.j2
@@ -23,7 +23,9 @@ services:
       - traefik.http.middlewares.sts-headers.headers.STSIncludeSubdomains=true
       - traefik.http.middlewares.sts-headers.headers.STSSeconds=31536000
       - traefik.http.middlewares.traefik-auth.basicauth.users={{ f_traefik__basic_auth_users }}
-      - traefik.http.middlewares.redirect-non-www-to-www.redirectregex.permanent=false
+      - traefik.http.middlewares.redirect-http-to-https.redirectscheme.permanent=true
+      - traefik.http.middlewares.redirect-http-to-https.redirectscheme.scheme=https
+      - traefik.http.middlewares.redirect-non-www-to-www.redirectregex.permanent=true
       - traefik.http.middlewares.redirect-non-www-to-www.redirectregex.regex="^https?://(?:www\\.)?(.+)"
       - traefik.http.middlewares.redirect-non-www-to-www.redirectregex.replacement="https://www.$${1}"
       - traefik.http.routers.traefik.entrypoints=websecure
