fix(playbooks): add header to mattermost for supporting plugin oauth integration

--- a/playbooks/templates/mattermost-docker-compose.yml.j2
+++ b/playbooks/templates/mattermost-docker-compose.yml.j2
@@ -8,8 +8,9 @@ services:
     labels:
       - traefik.docker.network=traefik
       - traefik.enable={{ a_mattermost__routing_enabled }}
+      - traefik.http.middlewares.mattermost.headers.customrequestheaders.X-Forwarded-Proto=https
       - traefik.http.routers.mattermost.entrypoints=websecure
-      - traefik.http.routers.mattermost.middlewares=sts-headers
+      - traefik.http.routers.mattermost.middlewares=sts-headers,mattermost
       - traefik.http.routers.mattermost.rule=Host(`{{ a_mattermost__service_fqdn }}`)
       - traefik.http.routers.mattermost.tls.certresolver=letsencrypt
       - traefik.http.routers.mattermost.tls=true
