ops: use bepinex and custom docker image for valheim

--- a/playbooks/templates/valheim-docker-compose.yml.j2
+++ b/playbooks/templates/valheim-docker-compose.yml.j2
@@ -2,7 +2,7 @@
 ---
 services:
   valheim-server:
-    image: "ghcr.io/lloesche/valheim-server:{{ a_valheim__image_tag | default('latest') }}"
+    image: "chronicc/valheim-server:{{ a_valheim__image_tag | default('latest') }}"
     container_name: valheim-server
     cap_add:
       - sys_nice
@@ -15,12 +15,12 @@ services:
       ADMINLIST_IDS: "{{ a_valheim__adminlist_ids | default('') }}"
       BACKUPS_CRON: "{{ a_valheim__backups_cron | default('0 * * * *') }}"
       BANNEDLIST_IDS: "{{ a_valheim__bannedlist_ids | default('') }}"
+      BEPINEX: {{ a_valheim__bepinex | default('false') | lower }}
       PERMITTEDLIST_IDS: "{{ a_valheim__permittedlist_ids | default('') }}"
       SERVER_NAME: "{{ a_valheim__server_name | default('Valheim Server') }}"
       SERVER_PASS: "{{ a_valheim__server_password | default('') }}"
-      SERVER_PUBLIC: "{{ a_valheim__server_public | default('0') }}"
+      SERVER_PUBLIC: {{ a_valheim__server_public | default('false') | lower }}
       TZ: "{{ a_valheim__timezone | default('Etc/UTC') }}"
-      VALHEIM_PLUS: "{{ a_valheim__valheim_plus | default('false') | bool }}"
       WORLD_NAME: "{{ a_valheim__world_name | default('Valheim') }}"
     networks:
       - default
